# quad_sim

./: CMakeLists.txt  package.xml
launch/: hover_quad.launch  teleop_quad.launch
scripts/: hover_cmd.py  teleop_to_so3.py
urdf/: pelican.gazebo.xacro  pelican_so3.urdf.xacro
