<?xml version="1.0"?>
<package format="2">
  <name>quad_sim</name>
  <version>0.0.0</version>
  <description>Simulation Experimentation Playground</description>

  <maintainer email="bljohnso@ucsd.edu">Bjorn Johnson</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>topic_tools</depend>
  <depend>erl_models</depend>
  <depend>quadrotor_msgs</depend>
  <depend>so3_control</depend>
  <depend>mrsl_quadrotor_simulator</depend>

  <export>
  </export>
</package>

